environments/gloo-gateway/ambient-demo/clusterservices-config/base/grafana-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - istio-gateways/https-gateway
  http:
  - name: grafana-ui
    match:
    - uri:
        prefix: /grafana
    route:
    - destination:
        host: grafana
        port:
          number: 3000
