environments/gloo-gateway/ambient-demo/clusterservices-config/base/prometheus-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - istio-gateways/https-gateway
  http:
  - name: prometheus-ui
    match:
    - uri:
        prefix: /prometheus
    route:
    - destination:
        host: prometheus
        port:
          number: 9090
